UX: prevent text from wrapping below notification icons

--- a/app/assets/stylesheets/common/base/menu-panel.scss
+++ b/app/assets/stylesheets/common/base/menu-panel.scss
@@ -275,6 +275,9 @@
 
       a {
         padding: 0;
+        > div {
+          overflow: hidden; // clears the text from wrapping below icons
+        }
       }
 
       p {
